force-app/main/default/objects/Ad__c/Ad__c.object-meta.xml
<CustomObject>
    <label>広告</label>
    <pluralLabel>広告</pluralLabel>
    <nameField>
        <label>広告名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject> 