force-app/main/default/objects/Ad__c/fields/AdCode__c.field-meta.xml
<CustomField>
    <fullName>AdCode__c</fullName>
    <label>広告コード</label>
    <length>50</length>
    <type>Text</type>
</CustomField> 