force-app/main/default/objects/Ad__c/fields/AdGroup__c.field-meta.xml
<CustomField>
    <fullName>AdGroup__c</fullName>
    <label>広告グループ</label>
    <referenceTo>AdGroup__c</referenceTo>
    <relationshipLabel>広告</relationshipLabel>
    <relationshipName>Ads</relationshipName>
    <type>MasterDetail</type>
</CustomField> 