force-app/main/default/objects/Ad__c/fields/Clicks__c.field-meta.xml
<CustomField>
    <fullName>Clicks__c</fullName>
    <label>クリック数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 