force-app/main/default/objects/Ad__c/fields/CTR__c.field-meta.xml
<CustomField>
    <fullName>CTR__c</fullName>
    <label>クリック率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField> 