force-app/main/default/objects/Ad__c/fields/DestinationURL__c.field-meta.xml
<CustomField>
    <fullName>DestinationURL__c</fullName>
    <label>リンク先URL</label>
    <type>Url</type>
</CustomField> 