force-app/main/default/objects/Ad__c/fields/HeadLine__c.field-meta.xml
<CustomField>
    <fullName>HeadLine__c</fullName>
    <label>見出し</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 