force-app/main/default/objects/Ad__c/fields/MediaType__c.field-meta.xml
<CustomField>
    <fullName>MediaType__c</fullName>
    <label>メディアタイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>画像</fullName>
                <default>true</default>
                <label>画像</label>
            </value>
            <value>
                <fullName>動画</fullName>
            </value>
            <value>
                <fullName>テキスト</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 