force-app/main/default/objects/Ad__c/fields/MediaURL__c.field-meta.xml
<CustomField>
    <fullName>MediaURL__c</fullName>
    <label>メディアURL</label>
    <type>Url</type>
</CustomField> 