force-app/main/default/objects/Ad__c/listViews/All_Active_Ads.listView-meta.xml
<ListView>
    <fullName>All_Active_Ads</fullName>
    <columns>NAME</columns>
    <columns>AdGroup__c</columns>
    <columns>AdCode__c</columns>
    <columns>HeadLine__c</columns>
    <columns>MediaType__c</columns>
    <columns>Impressions__c</columns>
    <columns>Clicks__c</columns>
    <columns>CTR__c</columns>
    <filterScope>Everything</filterScope>
    <label>全ての広告</label>
</ListView> 